<resources>
    <string name="app_name">GetMotivation()</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dati_corse_precedenti">DATI CORSE PRECEDENTI</string>
    <string name="grafico_ultima_corsa">GRAFICO ULTIMA CORSA</string>
    <string name="scelta_motivatori">SCELTA MOTIVATORI</string>
    <string name="nota_produttore">NOTA PRODUTTORE</string>
    <string name="cambia_password">CAMBIA PASSWORD</string>
    <string name="logout">LOGOUT</string>
    <string name="app">APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prova_motivatori">PROVA MOTIVATORI</string>
    <string name="setta_il_tempo">SETTA IL TEMPO</string>
    <string name="obbiettivi">OBBIETTIVI</string>
    <string name="misure">MISURE</string>
    <string name="altro">ALTRO</string>
    <string name="altre_impostazioni">ALTRE IMPOSTAZIONI</string>
    <string name="impostazioni_corsa">IMPOSTAZIONI CORSA</string>
    <string name="grafici_ultime_corse">GRAFICI ULTIME CORSE</string>
    <string name="registro_statistiche_utente">REGISTRO STATISTICHE UTENTE</string>
    <string name="impostazioni_suono">IMPOSTAZIONI SUONO</string>
    <string name="opzioni_suono">OPZIONI SUONO</string>
    <string name="obiettivi">OBIETTIVI</string>
</resources>